tests/errors/division_by_zero.f90
PROGRAM main
   IMPLICIT NONE
   PRINT *, 1/0

END PROGRAM main